Resolves: fdo#37449 apparent access into empty codepage bitset

Change-Id: I2efc3ea10cd4313eaa1894fdfbffd113a125e2ba